--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tauri-vue-sample",
+  "name": "vue-tauri-desktopapp-sample",
   "private": true,
   "version": "0.1.0",
   "type": "module",
