--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tauri-vue-sample"
+name = "vue-tauri-desktopapp-sample"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
