--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-opener": "^2.4.0",
     "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.9.3"
   },
   "devDependencies": {
