--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tauri-apps/plugin-opener": "^2.4.0",
     "chart.js": "^4.5.0",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
+    "vue-router": "4",
     "vuetify": "^3.9.3"
   },
   "devDependencies": {
