--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2.4.0",
     "chart.js": "^4.5.0",
+    "csstype": "^3.1.3",
     "vue": "^3.5.18",
     "vue-router": "4",
     "vuetify": "^3.9.3"
