--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
         "@tauri-apps/api": "^2.7.0",
         "@tauri-apps/cli": "^2.7.1",
         "@vitejs/plugin-vue": "^5.2.4",
+        "@vue/language-server": "^3.0.6",
+        "eslint-plugin-vue": "^10.4.0",
         "typescript": "~5.6.3",
         "vite": "^6.3.5",
+        "vue-eslint-parser": "^10.2.0",
         "vue-tsc": "^2.2.12"
     }
 }
