--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "devDependencies": {
         "@tauri-apps/api": "^2.7.0",
         "@tauri-apps/cli": "^2.7.1",
+        "@types/node": "^24.3.0",
         "@vitejs/plugin-vue": "^5.2.4",
         "@vue/language-server": "^3.0.6",
         "eslint-plugin-vue": "^10.4.0",
