--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
         "vuetify": "^3.9.3"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.35.0",
         "@tauri-apps/api": "^2.7.0",
         "@tauri-apps/cli": "^2.7.1",
         "@types/node": "^24.3.0",
+        "@typescript-eslint/eslint-plugin": "^8.42.0",
+        "@typescript-eslint/parser": "^8.42.0",
         "@vitejs/plugin-vue": "^5.2.4",
         "@vue/language-server": "^3.0.6",
+        "eslint": "^9.35.0",
         "eslint-plugin-vue": "^10.4.0",
+        "globals": "^16.3.0",
         "typescript": "~5.6.3",
         "vite": "^6.3.5",
         "vue-eslint-parser": "^10.2.0",
